# CodeExamples

./: ReadMe.txt
"Tread Lightly" Unity Game/: ReadMe.txt
"Tread Lightly" Unity Game/TreadLightlyMac.app/Contents/: Info.plist
"Tread Lightly" Unity Game/TreadLightlyPC/TreadLightlyPC_Data/: app.info  globalgamemanagers  globalgamemanagers.assets  level0  level1  level2  level3  level4  level5  resources.assets  sharedassets1.assets  sharedassets2.assets  sharedassets3.assets  sharedassets3.resource  sharedassets4.assets  sharedassets5.assets
Artificial Intelligence Class Code/: ReadMe.txt
Artificial Intelligence Class Code/Decision Making Heuristic Project/code/: CMakeLists.txt  README.txt  assign4.cpp  assign4.h
Artificial Intelligence Class Code/Decision Making Heuristic Project/text/: P1-output.txt  P2-output.txt  P3-output.txt
Artificial Intelligence Class Code/Shape Analogy Project [Project 2 of 2]/: ReadMe.txt
Artificial Intelligence Class Code/Shape Analogy Project [Project 2 of 2]/code/: CMakeLists.txt  ElectronicMind.cpp  ElectronicMind.h  README.txt  main.cpp
Artificial Intelligence Class Code/Shape Analogy Project [Project 2 of 2]/reports/: test1_solution.txt  test2_solution.txt  (+3 more)
Artificial Intelligence Class Code/Shape Identification Project [Project 1 of 2]/code/: CMakeLists.txt  diagram_processing.cpp  diagram_processing.h  diagram_shape.cpp  diagram_shape.h  io.cpp  io.h  main.cpp
Javascript Space Game Code/: README.txt  index.html
Javascript Space Game Code/scripts/: page.js
Javascript Space Game Code/style/: style.css
(+21 files in other folders)
